testdata/language-features/guard/guard12.reject.out
type error: can not unify
  Char
with
  ()
in guard12.reject.lc:1:13:
fun x | x = () | otherwise = 'a'
            ^^
------------ trace
!type error: can not unify
  Char
with
  ()
in guard12.reject.lc:1:13:
fun x | x = () | otherwise = 'a'
            ^^
------------ tooltips
guard12.reject.lc 1:13-1:15
    ()
guard12.reject.lc 1:30-1:33
    Char